# working-utils

./: Cargo.toml  README.md
scripts/: postgres_init.sql
src/: main.rs
src/active_records/: mod.rs  users.rs
src/common/: bills.rs  datetime.rs  md5_utils.rs  mod.rs  random.rs  response.rs  urls.rs
src/common/database/: db.rs  mod.rs  query_builder.rs
src/consts/: mod.rs
src/utils/: go_active_record.rs  mod.rs  rust_active_record.rs
src/utils/tpl/: go_active_record.tpl  go_model.tpl  rust_active_record.tpl  rust_active_record_by.tpl
