[package]
name = "working-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
async-std = { version = "1.12.0", features = ["std", "attributes"] }
sqlx = { version = "0.6", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "macros",
    "postgres",
] }
Inflector = "0.11"
futures = "0.3.25"
log = "0.4"
env_logger = "0.10"
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"
md5 = "0.7"
rand = "0.8"
serde_json = "1.0"

# validator = { version = "0.14", features = ["phone"] }
# validator_derive = "0.14"
# redis = { version = "0.21", features = ["async-std-comp"] }
# dotenv = "0.15"
# regex = "1.5"
# actix-session = "0.4"
# lazy_static = "1.4"
